force-app/main/default/objects/Asset/fields/Arrears__c.field-meta.xml
<CustomField>
    <fullName>Arrears__c</fullName>
    <label>Arrears</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>