force-app/main/default/objects/Asset/fields/Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card__c</fullName>
    <label>Credit Card</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>