force-app/main/default/objects/Asset/fields/Line_of_Credit__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Credit__c</fullName>
    <label>Line of Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>