force-app/main/default/objects/Asset/fields/Mortages__c.field-meta.xml
<CustomField>
    <fullName>Mortages__c</fullName>
    <label>Mortages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>